# fast-app

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  KNOWLEDGE_BASE.md  KNOWLEDGE_BASE_IMPLEMENTATION.md  README.md  TUI_DESIGN.md  base-cover-letter.json  base-resume.json  config.json.example  docker-build-push.sh  docker-compose.yml  profile.json.example  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/plans/: major-features-implementation-plan.md  major-features-v2.md  pr-plan-5-features.md
docs/adr/: 001-llm-abstraction-langchain.md  002-chromadb-vector-memory.md  003-sqlmodel-sqlite-auth.md  004-jwt-bcrypt-auth.md  005-chonkie-semantic-chunking.md  006-knowledge-extraction-llm.md  007-cli-first-architecture.md
docs/guide/: auth-setup.md  knowledge.md  llm-providers.md  profiles.md
src/fast_app/: __init__.py  cli.py  config.py  db.py  dotenv.py  log.py  models.py
src/fast_app/cli/: __init__.py  auth.py  connection.py  interactive.py  knowledge.py  list_cmd.py  main.py  profile.py  status.py
src/fast_app/knowledge/: __init__.py  integration.py  kb.py  models.py
src/fast_app/models/: __init__.py  db_models.py  knowledge.py
src/fast_app/prompts/: __init__.py  cover_letter.py  fact_extraction.py  questions.py  resume.py  templates.py
src/fast_app/services/: __init__.py  auth.py  auth_core.py  cache.py  cli_callbacks.py  cover_letter_merger.py  fact_extractor.py  job_extractor.py  jsearch_service.py  knowledge.py  llm_service.py  ollama.py  pipeline.py  profile_service.py  reactive_resume.py  resume_merger.py
tests/: conftest.py  test_auth.py  test_cache.py  test_cli.py  test_config.py  test_duplicate_company_validation.py  test_job_extractor.py  test_knowledge_base.py  test_knowledge_integration.py  test_knowledge_routes.py  test_llm_service.py  test_per_user_state.py  test_profile_routes.py  test_profile_service.py  test_prompts.py  test_reactive_resume.py  test_retry.py
(+45 files in other folders)
