[project]
name = "fast-app"
version = "1.0.0"
description = "Generate tailored resumes from job URLs and import to Reactive Resume"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Fast App", email = "hello@example.com"}
]
keywords = ["resume", "jobs", "llm", "ollama", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.0",
    "ollama>=0.4",
    "pydantic>=2.0",
    "requests>=2.31",
    "progress>=1.6.1",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
llm = [
    "langchain-core>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
]
auth = [
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
]
knowledge = [
    "chromadb>=0.5.0",
    "chonkie[semantic]>=1.0.0",
]

[project.scripts]
fast-app = "fast_app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fast_app"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/fast_app/models.py" = ["N815"]

[tool.mypy]
python_version = "3.10"
strict = true